Try to fix flickering in size caused by scrollbars in Windows

--- a/app/styles/ui/_side-by-side-diff.scss
+++ b/app/styles/ui/_side-by-side-diff.scss
@@ -1,6 +1,6 @@
 .side-by-side-diff-container {
   width: 100%;
-  overflow: auto;
+  overflow: hidden;
   flex-grow: 1;
 
   &.selecting-before .after,
